test/regress/coverage-item-lookup-L-break.test
; Test item_t::lookup break for 'L' prefix (item.cc line 520)
2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format '%(Lfoo)\n' -> 1
__ERROR__
While calculating format expression:
  Lfoo
While evaluating value expression:
  Lfoo
  ^^^^
While handling posting from "$FILE", line 3:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Lfoo'
end test
